Laptop change save

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,16 @@ services:
       - DJANGO_SETTINGS_MODULE=todo_project.settings
 
   nginx:
-    image: nginx:1.25
-    # ports:
-    #   - "8080:80"
+    build:
+      context: .
+      dockerfile: nginx/Dockerfile
+      ports:
+        - "8080:80"
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/energy_headers.js:/etc/nginx/energy_headers.js:ro
+      - ./url_energy.json:/etc/nginx/url_energy.json:ro
       # - media:/app/media:ro
       # - static:/app/static:ro
     depends_on:
