--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,6 @@
+js_import energy from /etc/nginx/energy_headers.js;
+js_preload_object energy_config from /etc/nginx/url_energy.json;
+
 server {
     listen 80;
     server_name _;
@@ -5,14 +8,17 @@ server {
     client_max_body_size 20m;
 
     location /static/ {
+        js_header_filter energy.addCarbonHeaders;
         alias /app/static/;
     }
 
     location /media/ {
+        js_header_filter energy.addCarbonHeaders;
         alias /app/media/;
     }
 
     location / {
+        js_header_filter energy.addCarbonHeaders;
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
